a lot of minor changes, add registration and authentication
