# controllers/api/registration.py
@@ -1,4 +1,7 @@
+import hashlib
+
 from utils import validators
+from models import Users
 from exceptions import PasswordMissMatchException
 
 
@@ -8,4 +11,9 @@ async def registration_handler(request):
     if data['password'] != data['confirm_password']:
         raise PasswordMissMatchException()
 
-    return {}
+    del data['confirm_password']
+    data['password'] = hashlib.sha3_256(data['password'].encode('utf-8')).hexdigest()
+
+    await Users.insert(request.app['db'], data)
+
+    return {}, 201
